kustomizations/lens-metrics/03-prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: lens-metrics
spec:
  rules:
    - host: prometheus.cppcli.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: prometheus
              servicePort: 80
